fix enter button alignment on small screens

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -164,8 +164,8 @@ body.homepage {
 	div#enter {
 		position: absolute;
 		bottom: 2em;
-		left: 50%;
-		right: 50%;
+		width: 100%;
+		text-align: center;
 		a {
 			background-color: black;
 			border-radius: 12em;
